// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="InViewport"
  data-test-id="cf-ui-in-viewport"
  offset="0"
>
  <button
    class="TextLink TextLink--primary"
    data-test-id="cf-ui-text-link"
    type="button"
  >
    <span
      class="TabFocusTrap"
      tabindex="-1"
    >
      Some Link
    </span>
  </button>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="InViewport my-extra-class"
  data-test-id="cf-ui-in-viewport"
  offset="0"
>
  <button
    class="TextLink TextLink--primary"
    data-test-id="cf-ui-text-link"
    type="button"
  >
    <span
      class="TabFocusTrap"
      tabindex="-1"
    >
      Some Link
    </span>
  </button>
</div>
`;
